# cppjni

./: CMakeLists.txt  Makefile  README.md
include/cppjni/: signature.hpp
include/cppjni/detail/: static_string.hpp
test/: CMakeLists.txt  test_signature.cpp
